<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_privacy"/>
        <TextView
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/judulterms5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/terms5"/>
    </LinearLayout>
</ScrollView>
