<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Login"
    android:background="@color/black"
    android:paddingBottom="20dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="20dp">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/gold"
        android:textSize="30dp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:theme="@style/Theme.App.Base" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/gold"
            android:theme="@style/Theme.App.Base" />
    </android.support.design.widget.TextInputLayout>
    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btn_Login"
        pb_colorComplete="@color/green_complete"
        pb_colorNormal="@color/blue_normal"
        pb_colorPressed="@color/blue_pressed"
        pb_colorProgress="@color/purple_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="Sign In"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textViewLinkRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_not_member"
        android:textColor="@color/green_complete"
        android:textSize="20dp"
        android:textStyle="bold" />
</LinearLayout>