<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/star" />
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/star" />
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/smileystar" />
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/star" />
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/star" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_margin="20dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/rate_us"/>
                <Button
                    android:id="@+id/rate_rating"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/button_rate"
                    android:background="@color/bg_screen1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="Let's give Feedback to us, so we can improve our app"/>
        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textColorHint="@color/darkgray"
            android:maxLines="1"
            android:id="@+id/textInputEditTextSubjectEmail"
            android:inputType="textCapSentences|textMultiLine"/>
        <EditText
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write"
            android:textColorHint="@color/darkgray"
            android:maxLines ="5"
            android:id="@+id/textInputEditTextMessages"
            android:inputType="textCapSentences|textMultiLine"/>
        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/rate_mail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/mail" />
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Email to Us"/>
    </LinearLayout>

</ScrollView>
